--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "@angular/common": "^7.2.0",
     "@angular/core": "^7.2.0"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  }
   "repository": {
     "type": "git",
     "url": "https://github.com/karethadeepak/angular-tawk.git"
